[project]
name = "unbiased-ltr"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "yng87", email = "k.yanagi07@gmail.com" }]
dependencies = [
    "kedro>=0.19.2",
    "numpy==1.26.2",
    "scikit-learn==1.3.2",
    "torch==2.1.2",
    "xgboost==2.0.3",
    "wandb>=0.16.3",
    "kedro-datasets>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.2",
    "lightning>=2.2.0.post0",
    "torchmetrics>=1.3.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
unbiased-ltr = "unbiased_ltr.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/unbiased_ltr"]

[tool.kedro]
package_name = "unbiased_ltr"
project_name = "unbiased-ltr"
kedro_init_version = "0.19.2"
tools = ["Linting", "Testing", "Custom Logging", "Data Structure"]
example_pipeline = "True"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = ["F", "W", "E", "I", "UP", "PL", "T201"]
ignore = ["E501"]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/unbiased_ltr -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true
